tests/syntax-error/SyntaxError.vb
Public Moduleeee@23 Leap